# linux

./: README  arch_list_all.json
certs/: Kconfig
scripts/kconfig/: .gitignore  CMakeLists.txt  Makefile  cf_expr.c  cf_expr.h  cftestconfig  cftestconfig-cfg  cftestconfig.cc  cftestconfig.h  cftestgenconfig  cftestgenconfig-cfg  cftestgenconfig.cc  cftestgenconfig.h  configfix.c  picosat.c
